--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <section id="sec3">
-
+            <ul id="list"></ul>
         </section>
         <canvas id="myChart"></canvas>
     </main>
